--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,4 +102,5 @@
 body{
   background: linear-gradient(90deg, #14101B -0.96%, #0E0E10 99.97%);
   font-family: var(--font-euclid);
+  overflow-x: hidden;
 }
