--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,7 +104,7 @@ body{
   font-family: var(--font-euclid);
   overflow-x: hidden;
 }
-
+/* 
 .swiper-button-next,
 .swiper-button-prev {
     background-color: #DCFA6C;
@@ -112,11 +112,8 @@ body{
     border-radius: 100%;
     right:10px;
     padding: 30px;
-    width: 20px;
+    width: 10px !important;
     color: #000 !important;
     fill: black !important;
     stroke: black !important;
-}
-.gallery .rfm-marquee-container {
-  padding: 100px 20px;
-}
+} */
